# clausi-cli

./: .clausiignore  .gitignore  CLAUDE.md  LICENSE  MANIFEST.in  README.md  action.yml  build_backend.py  pyproject.toml  scan_output.txt  setup.py  setup_dev.py  test_cli_payment_flow.py  test_payment_scenario.py  test_real_payment_flow.py
.github/workflows/: example.yml
CLAUDE/: BACKEND_CLI_TESTING_GUIDE.md  BACKEND_INTEGRATION_GUIDE.md  BACKEND_QUICK_REFERENCE.md  BACKEND_README.md  BACKEND_TRANSFER.md  CHANGELOG_v1.0.0.md  CLAUDE.md  CLAUSI_CLI_KNOWLEDGE_TRANSFER.md  CLI_MODERNIZATION_PLAN.md  FRONTEND_IMPLEMENTATION.md  PRICING_STRATEGY.md  README.md  REFACTORING_PLAN.md  REFACTORING_PROGRESS.md  TESTING.md  TEST_RESULTS.md  TUI_IMPLEMENTATION.md  USER_GUIDE.md
CLAUDE/archive/: BACKEND_API_EXAMPLES.md  PAYMENT_INTEGRATION_SUMMARY.md
clausi/: __init__.py  __main__.py  cli.py  config.example.yml  create_config.py
clausi/api/: __init__.py  client.py
clausi/commands/: __init__.py
clausi/core/: __init__.py  clause_selector.py  payment.py  scanner.py
clausi/services/: claude_code_provider.py
clausi/templates/default/: template.yml
clausi/templates/default/styles/: main.css
clausi/templates/detailed/: template.yml
clausi/tui/: __init__.py  app.py  interactive.py
clausi/tui/screens/: __init__.py  config.py
clausi/utils/: __init__.py  config.py  console.py  custom_regulations_README.md  emoji.py  output.py  regulations.py
clausi_cli/: __init__.py  cli.py  config.py  scan.py
clausi_cli/templates/executive/: template.yml
clausi_cli/tests/: test_cli.py
tests/: README.md  mock_backend.py  test_cli.py  test_cli_payment_flow.py  test_payment_scenario.py  test_real_payment_flow.py  test_v1_features.py
tests/fixtures/: main.py  utils.py
