[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clausi"
dynamic = ["version"]
description = "AI compliance auditing CLI"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "Clausi", email = "support@clausi.ai"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "click>=8.0.0",
    "rich>=10.0.0",
    "requests>=2.26.0",
    "pyyaml>=5.4.1",
    "python-dotenv>=0.19.0",
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "pathspec>=0.10.0",
    "textual>=0.47.0",
    "questionary>=2.0.0",
]

[project.urls]
"Homepage" = "https://clausi.ai"
"Repository" = "https://github.com/earosenfeld/clausi-cli"
"Documentation" = "https://docs.clausi.ai"
"Support" = "https://clausi.ai/contact"

[project.scripts]
clausi = "clausi.cli:main"

[tool.setuptools]
packages = {find = {}}  # Automatically find all packages

[tool.setuptools.dynamic]
version = {attr = "clausi.__version__"}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F", "B", "I"]
ignore = []

[tool.ruff.isort]
known-first-party = ["clausi"]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "ruff>=0.1.0", "black>=23.0.0", "mypy>=1.0.0"] 